--- a/packages/google_maps_flutter/google_maps_flutter_web/version_check.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter_web/version_check.yaml
@@ -1,3 +1,7 @@
+# Copyright 2013 The Flutter Authors. All rights reserved.
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 # This file is used to check that the version string in the Constants.dart file is up to date and matches 
 # the version in pubspec.yaml.
 filepath: lib/src/constants.dart
